<resources>
    <string name="app_name">GHCli</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_home_page">HomePage</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_close">Close</string>
    <string name="welcome_to_ghcli">GHCli</string>


    <!--Messages Login-->
    <string name="login_failed">Login failed. Please try again!</string>

    <!--Messages Connection-->
    <string name="no_connection">No internet connection</string>
    <string name="wait_connecting">Wait while connecting...</string>

    <!--Messages Starred Repositories-->
    <string name="starred_repos_unstar_default">Unstar</string>
    <string name="starred_repos_star_number_default">0</string>

    <!--Messages Repositories-->
    <string name="repos_name_default">No Name</string>
    <string name="repos_text_private">Private</string>
    <string name="repos_description_default">No Description</string>
    <string name="repos_language_default">No Language</string>
    <string name="repos_date_default">No Date</string>

    <!--Messages Profile-->
    <string name="profile_text">Profile</string>
    <string name="name_default_user">Unnamed</string>
    <string name="login_default_user">No Login</string>
    <string name="email_default_user">No Email</string>
    <string name="location_default_user">No Location</string>
    <string name="bio_default_user">No Description</string>
    <string name="profile_organization">Organizations</string>
    <string name="profile_overview">Overview</string>
    <string name="default_overview_followers">Followers: 0</string>
    <string name="default_overview_followings">Following: 0</string>
    <string name="default_overview_public_repos">Public Repos: 0</string>
    <string name="default_overview_private_repos">Private Repos: 0</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_repos">Repositories</string>
    <string name="menu_followers">Followers</string>
    <string name="notification_type_default">No Type</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notification Channel</string>
</resources>
