<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repository"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repositoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:text="@string/repos_name_default"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    android:id="@+id/repositoryCardPrivate"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@android:color/background_light"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/repositoryPrivate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/repos_text_private"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16sp" />
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/repositoryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/repos_description_default"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repositoryLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_description_black_24dp"
                    android:text="@string/repos_language_default"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/repositoryLatsUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repos_date_default" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>