<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repository"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notificationReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableStart="?android:attr/alertDialogIcon"
                    android:paddingLeft="8dp"
                    android:text="@string/repos_name_default"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <TextView
                android:id="@+id/notificationType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/notification_type_default"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/notificationDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/repos_description_default"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>